fix alignment and add next button styles

--- a/src/sass/sections/game-board.sass
+++ b/src/sass/sections/game-board.sass
@@ -2,6 +2,10 @@
   display: flex
   justify-content: center
 
+.ingame 
+  flex-direction: column
+  align-items: center
+
 .game-board-container 
   display: grid
   grid-template-columns: 70% 30%
